--- a/scipage.html
+++ b/scipage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <ul>
-<li><b><a href="mainpage.html">Computer engineering role in Covidñ19 pandemic</a></b></li>
+<li><b><a href="index.html">Computer engineering role in Covid‚Äì19 pandemic</a></b></li>
 <li><b><a href="symptomspage.html">Symptoms of covid -19 </a></b></li>
 <li><b><a href="calcpage.html">The role of computer engineering  in covid -19 pandemic in calculations and information</a></b></li>
 <li><b><a href="casespage.html">Role of computer  engineering in  number  of cases and graphs of it</a></b></li>
@@ -21,11 +21,11 @@
 </ul>
 <h1><center>Computer scientists role in this topic</center></h1>
 
-<p>	ìWe canít 3D-print doctors and  nurses, ìhowever, we can increase their patient care capabilities through 21st century communications.î
-The group is developing a telemedicine platform, called TV CV19, designed to enhance hospital-wide communications and help medical specialists  to care for more patients and  Clinicians with the most  care experience can care  on the sickest patients while having a telecommunications conduit to advise their colleagues. This way, technology can multiply expertise. care specialists canít possibly monitor all patients, but their knowledge can easily be shared with other clinicians</p>
+<p>	‚ÄúWe can‚Äôt 3D-print doctors and  nurses, ‚Äúhowever, we can increase their patient care capabilities through 21st century communications.‚Äù
+The group is developing a telemedicine platform, called TV CV19, designed to enhance hospital-wide communications and help medical specialists  to care for more patients and  Clinicians with the most  care experience can care  on the sickest patients while having a telecommunications conduit to advise their colleagues. This way, technology can multiply expertise. care specialists can‚Äôt possibly monitor all patients, but their knowledge can easily be shared with other clinicians</p>
 
 
-<p>	Ventilator control is  very important. As a patientís lungs suffers from corona virus infection, ventilator pressure must be adjusted to avoid additional damage. The team has developed an experimental universal control systemóbuilt with a mobile phone and other off-the-shelf components in which will allow operators to adjust these ventilators and protect patients.
+<p>	Ventilator control is  very important. As a patient‚Äôs lungs suffers from corona virus infection, ventilator pressure must be adjusted to avoid additional damage. The team has developed an experimental universal control system‚Äîbuilt with a mobile phone and other off-the-shelf components in which will allow operators to adjust these ventilators and protect patients.
 </p>
 <p><center><b><h2>Robot image</h2></b></center></p>
 <p><center><img src="https://assets.weforum.org/article/image/large_nXSA4thvgXtsXpKBJc5Zb_vcaLxtO8NRpIhS7BrdiFY.jpg" alt="coronavirus" width="600" height="450"></center></p>
@@ -33,6 +33,6 @@ The group is developing a telemedicine platform, called TV CV19, designed to enh
 <p>Computers can also discover the location of existed place of corona virus</p>
 
 <p>The pandemic has led enterprise software company    to diversify into life sciences, in a study demonstrating that AI models can learn the language of biology, just as they can do speech and image recognition. The idea is that the AI system will then be able to design proteins, or identify unknown proteins, that have specific properties, which could be used to treat COVID-19.</p>
-<p><h2>So that .. computer engineering  has a great role in Covidñ19 pandemic</h2></p>
+<p><h2>So that .. computer engineering  has a great role in Covid‚Äì19 pandemic</h2></p>
 </body>
 </html>
