--- a/scipage.html
+++ b/scipage.html
@@ -5,7 +5,7 @@
 <style>
     body{
         background: rgb(58, 58, 58);
-        color: grey;
+        color: off-white;
         margin:5;
     }
 </style>
