--- a/calcpage.html
+++ b/calcpage.html
@@ -4,8 +4,8 @@
 <title>The role of computer engineering  in covid -19 pandemic in calculations and information</title>
 <style>
     body{
-        background: rgb(58, 58, 58);
-        color: white;
+        background: off-white;
+        color: grey;
         margin:5;
     }
 </style>
