--- a/apppage.html
+++ b/apppage.html
@@ -4,8 +4,8 @@
 <title>Computer applications to help in covid -19 pandemic</title>
 <style>
     body{
-        background: rgb(58, 58, 58);
-        color: white;
+        background: off-white;
+        color: grey;
         margin:5;
     }
 </style>
