--- a/casespage.html
+++ b/casespage.html
@@ -4,8 +4,8 @@
 <title>The role of computer engineering in number of cases and graphs of it</title>
 <style>
     body{
-        background: rgb(58, 58, 58);
-        color: off-white;
+        background: off-white;
+        color: grey;
         margin:5;
     }
 </style>
