--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Computer engineering role in Covid–19 pandemic</title>
 <style>
     body{
-        background: off-white );
+        background: off-white ;
         color: grey;
         margin:5;
     }
