--- a/scipage.html
+++ b/scipage.html
@@ -4,8 +4,8 @@
 <title>Computer scientists role in this topic</title>
 <style>
     body{
-        background: rgb(58, 58, 58);
-        color: off-white;
+        background: off-white;
+        color: grey;
         margin:5;
     }
 </style>
