--- a/symptomspage.html
+++ b/symptomspage.html
@@ -4,8 +4,8 @@
 <title>Symptoms of covid -19 </title>
 <style>
     body{
-        background: rgb(58, 58, 58);
-        color: off-white;
+        background:off-white ;
+        color:grey ;
         margin:5;
     }
 </style>
