--- a/casespage.html
+++ b/casespage.html
@@ -24,7 +24,7 @@
 <center><table style="width:80%">
     <style>
         table, th, td {
-  border: 1px solid white;
+  border: 1px solid black;
   border-collapse: collapse;
 }
     </style>
